--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Nika Germanishvili",
-  "name": "Design Portfolio of Nika Germanishvili",
+  "short_name": "Pavona Studio",
+  "name": "Pavona Studio Landing page",
   "icons": [
     {
       "src": "favicon.png",
