--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
   },
   "extends": ["eslint:recommended", "next/core-web-vitals"],
   "rules": {
-    "semi": "error",
+    "semi": "warn",
     "no-unused-vars": "warn",
     "import/no-anonymous-default-export": "off",
     "react/display-name": "off",
